--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
         <p>Projects Completed</p> 
       </div>
     </div>
+    <a href="#header" class="scroll-up">⬆️</a>
   </section>
 
   <footer class="footer">
