--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-  <header class="header">
+  <header class="header" id = "header">
     <div class="logo"><span>&lt;/&gt;</span> Developer </div>
     
     <nav class="nav">
