--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
     <div class="hero-content">
         <button id="themeToggle" class="theme-btn">🌞 Light mode</button>
 
-      <h2>I'm Nuzrath, a <span>Web Developer</span></h2>
-      <p>I build scalable, performant, and beautiful websites.</p>
+      <h2>I'm Nuzrath, a <span>Full Stack Developer</span></h2>
+      <p>I build scalable, performant, and beautiful websites and apps.</p>
       <a href="#about" class="scroll-down">⬇️</a>
     </div>
     <div class="hero-img">
@@ -36,7 +36,7 @@
 
   <section class="about" id="about">
     <div class="about-text">
-      <h3>I've been developing websites since 2024</h3>
+      <h3>I've been developing websites and apps since 2022</h3>
       <p>Experienced in frontend, backend, and everything in between. I love clean code and effective UX.</p>
       <a href="about.html" class=>More about me</a>
     </div>
