--- a/project.html
+++ b/project.html
@@ -11,14 +11,15 @@
   <div class="container">
     <header>
       <h1>Nuzrath</h1>
-      <p>Frontend Developer | Web developer | MERN Stack Enthusiast</p>
+      <p>Full Stack Developer | Web developer | MERN Stack Enthusiast</p>
        <button id="themeToggle" class="theme-btn">🌞 Light mode</button>
     </header>
 <h1>Projects</h1>
     <h3>Smart Campus Management System</h3>
     <h3>Hospital Management System</h3>
     <h3>System to calculate vehicle hire amounts </h3>
-    <h3>A healthy diet planner using the MERN stack</h3>
+    <h3>Product Store app using MERN stack</h3>
+    <h3>A Fitness app using AI technologies</h3>
     <ul>
         <li>Designed and developed login, register  and all the interfaces and features using HTML, CSS, JavaScript, and PHP.</li>
         <li>Contributed to system design, including wireframes, use-case diagrams, Activity diagram and ER Diagrams.</li>
